# index.js
@@ -12,6 +12,7 @@ import userRouter from './routers/user.js'
 import productRouter from './routers/product.js'
 import companyRouter from './routers/company.js'
 import reviewRouter from './routers/review.js'
+import orderRouter from './routers/order.js'
 
 
 dotenv.config()
@@ -34,5 +35,6 @@ app.use('/user', userRouter)
 app.use('/product', productRouter)
 app.use('/company', companyRouter)
 app.use('/review', reviewRouter)
+app.use('/order', orderRouter)
 
 app.listen(port, () => console.log("Server đang chạy tại http://localhost:3000"))
