# routers/order.js
@@ -1,0 +1,7 @@
+import express from 'express'
+import orderController from '../controllers/order.js'
+const router = express.Router()
+
+router.post('/create', orderController.createOrder)
+
+export default router
